--- a/addons/web/i18n/cs.po
+++ b/addons/web/i18n/cs.po
@@ -3204,7 +3204,7 @@ msgstr "Běží na %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Přináší vám <span>Odoo</span>"
 
 #. module: web
