--- a/addons/web/i18n/hr.po
+++ b/addons/web/i18n/hr.po
@@ -3222,7 +3222,7 @@ msgstr "Pokreće %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Podržano od <span>Odoo</span>"
 
 #. module: web
