--- a/addons/web/i18n/it.po
+++ b/addons/web/i18n/it.po
@@ -3221,7 +3221,7 @@ msgstr "Fornito da %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Fornito da <span>Odoo</span>"
 
 #. module: web
