--- a/addons/web/i18n/vi.po
+++ b/addons/web/i18n/vi.po
@@ -3219,7 +3219,7 @@ msgstr "Cung cấp bởi %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Được hỗ trợ bởi <span>Hệ thống</span>"
 
 #. module: web
