--- a/addons/web/i18n/af.po
+++ b/addons/web/i18n/af.po
@@ -1778,7 +1778,7 @@ msgstr "Aangedryf deur"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Aangedryf deur <span>Odoo</span>"
 
 #. module: web
