--- a/addons/web/i18n/ca.po
+++ b/addons/web/i18n/ca.po
@@ -3189,7 +3189,7 @@ msgstr ""
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Recolzat per <span>Odoo</span> "
 
 #. module: web
