--- a/addons/web/i18n/es.po
+++ b/addons/web/i18n/es.po
@@ -3214,7 +3214,7 @@ msgstr "Con tecnología de %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Respaldado por <span>Odoo</span>"
 
 #. module: web
