--- a/addons/web/i18n/es_DO.po
+++ b/addons/web/i18n/es_DO.po
@@ -1967,8 +1967,8 @@ msgstr "Powered by"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
-msgstr "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
+msgstr "Powered by <span> Xenon</span>"
 
 #. module: web
 #. openerp-web
