--- a/addons/web/i18n/fa.po
+++ b/addons/web/i18n/fa.po
@@ -3179,7 +3179,7 @@ msgstr "قدرت گرفته از %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "راه اندازی شده به وسیله <span>اُدو</span>"
 
 #. module: web
