--- a/addons/web/i18n/fi.po
+++ b/addons/web/i18n/fi.po
@@ -3203,7 +3203,7 @@ msgstr "Järjestelmää pyörittää %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Järjestelmää pyörittää <span>Odoo</span>"
 
 #. module: web
