--- a/addons/web/i18n/he.po
+++ b/addons/web/i18n/he.po
@@ -3174,7 +3174,7 @@ msgstr "מופעל ע\"י %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "מופעל ע\"י <span>Odoo</span>"
 
 #. module: web
