--- a/addons/web/i18n/id.po
+++ b/addons/web/i18n/id.po
@@ -3229,7 +3229,7 @@ msgstr "Dipersembahkan oleh %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Disajikan oleh <span>Odoo</span>"
 
 #. module: web
