--- a/addons/web/i18n/ko.po
+++ b/addons/web/i18n/ko.po
@@ -3170,7 +3170,7 @@ msgstr "제공자 %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "제공자 <span>Odoo</span>"
 
 #. module: web
