--- a/addons/web/i18n/pl.po
+++ b/addons/web/i18n/pl.po
@@ -3206,8 +3206,8 @@ msgstr ""
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
-msgstr "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
+msgstr "Powered by <span> Xenon</span>"
 
 #. module: web
 #. openerp-web
