--- a/addons/web/i18n/ru.po
+++ b/addons/web/i18n/ru.po
@@ -3223,7 +3223,7 @@ msgstr "На базе %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "На базе <span>Odoo</span>"
 
 #. module: web
