--- a/addons/web/i18n/uk.po
+++ b/addons/web/i18n/uk.po
@@ -3190,7 +3190,7 @@ msgstr "Зроблено %s%s"
 
 #. module: web
 #: model_terms:ir.ui.view,arch_db:web.login_layout
-msgid "Powered by <span> Lux Sourcing</span>"
+msgid "Powered by <span> Xenon</span>"
 msgstr "Створено в <span>Odoo</span>"
 
 #. module: web
