final change xenon to erp

--- a/addons/mail_bot/i18n/fa.po
+++ b/addons/mail_bot/i18n/fa.po
@@ -71,7 +71,7 @@ msgstr "مسیریابی HTTP"
 #: code:addons/mail_bot/models/mail_channel.py:0
 #, python-format
 msgid ""
-"Hello,<br/>Odoo's chat helps employees collaborate efficiently. I'm here to "
+"Hello,<br/>ERP's chat helps employees collaborate efficiently. I'm here to "
 "help you discover its features.<br/><b>Try to send me an emoji</b> <span "
 "class=\"o_odoobot_command\">:)</span>"
 msgstr ""
